[package]
name = "json-query-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk" }
jolt-inlines-blake2.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
gjson = { git = "https://github.com/themighty1/gjson.rs" }
